--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-GOOGLE_API_KEY = "AIzaSyB0xu-HDPh0PbLaoSpCeWiqQTryeDoDTyk"
+GOOGLE_API_KEY = "gemini key"
+FETCH_URL = "**qdrant url**/dashboard#/collections/web_scrapper"
+QDRANT_URL = "qdrant url"
+QDRANT_API="qdrant api"
