.env file removed

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GOOGLE_API_KEY = "gemini key"
-FETCH_URL = "**qdrant url**/dashboard#/collections/web_scrapper"
-QDRANT_URL = "qdrant url"
-QDRANT_API="qdrant api"
+GOOGLE_API_KEY = "AIzaSyB0xu-HDPh0PbLaoSpCeWiqQTryeDoDTyk"
+FETCH_URL = "https://d2f316e5-aecb-484f-a515-bdb0d61143f3.us-west-1-0.aws.cloud.qdrant.io:6333/dashboard#/collections/web_scrapper"
+QDRANT_URL = "https://d2f316e5-aecb-484f-a515-bdb0d61143f3.us-west-1-0.aws.cloud.qdrant.io:6333"
+QDRANT_API="A97ywzviKu5LylwwpAuFg3v-seSzqJIQHNI59_xa2B7MFCjqKOL4hw"
